@@ -71,11 +71,14 @@ class NTP(object):
 
     ## map of tag attribute types 
     aTn = {"signal":"NX_INT", "axis":"NX_INT", "primary":"NX_INT32", "offset":"NX_INT", 
-          "stride":"NX_INT", "vector":"NX_FLOATVECTOR", "file_time":"NX_DATE_TIME", 
+          "stride":"NX_INT", "file_time":"NX_DATE_TIME", 
           "file_update_time":"NX_DATE_TIME", "restricted":"NX_INT", 
           "ignoreExtraGroups":"NX_BOOLEAN", "ignoreExtraFields":"NX_BOOLEAN", 
           "ignoreExtraAttributes":"NX_BOOLEAN", "minOccus":"NX_INT", "maxOccus":"NX_INT"
         }
+
+    ## map of vector tag attribute types 
+    aTnv = {"vector":"NX_FLOAT"}
 
     ## map of rank : data format
     rTf = {0:"SCALAR", 1:"SPECTRUM", 2:"IMAGE"}
